# github-ci-playground

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: ci.yml
ci/: Dockerfile.x86_64-unknown-linux-musl
src/: main.rs
