[package]
name = "github-ci-playground"
version = "0.1.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'x86_64-pc-windows-gnu'.dependencies]
winapi = "0.3.8"

[target.'x86_64-unknown-linux-musl'.dependencies]
openssl-sys = "0.9.49"
